<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">书签</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_book">AddBookActivity</string>
    <string name="title_activity_book_marker">BookMarkerActivity</string>
    <string name="title_activity_tmain">TMainActivity</string>
	<string name="book_name_str">书名</string>
	<string name="author_str">作者</string>
	<string name="page_number_str">总页数</string>
	<string name="book_page_number_str">页码</string>
	<string name="add_str">添加</string>
	<string name="save_str">保存</string>
	<string name="back_str">取消</string>
</resources>
