<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    tools:context=".BookMarkerActivity"
    android:background="@color/slg_list_backcolor"  >

    <LinearLayout android:orientation="vertical"
        android:layout_width="fill_parent" 
        android:layout_height="fill_parent" 
        android:layout_alignParentTop="true" 
        android:layout_alignParentRight="true" 
        android:layout_marginTop="3.0dip" 
        android:layout_marginRight="5.0dip"  
        android:layout_marginLeft="5.0dip"
        android:layout_centerHorizontal="true">
 
        <TextView
        android:id="@+id/bookName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"  /> 
      <TextView
        android:id="@+id/author"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"  />
      <TextView
        android:id="@+id/pageNumber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"   />
      
        
    <EditText
        android:id="@+id/readPageNumber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        
        android:inputType="number"
        android:hint="@string/book_page_number_str"
        android:ems="10" />
<LinearLayout android:gravity="center_vertical" android:layout_gravity="center" android:orientation="horizontal" android:id="@+id/linToolBar" android:layout_width="fill_parent" android:layout_height="wrap_content" >
    <Button
        android:id="@+id/saveBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_gravity="center"  
        android:text="@string/save_str" /> 
    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_gravity="center"  
         android:text="@string/back_str" />
    </LinearLayout>
    <ListView android:id="@+id/listView" 
        android:background="@color/slg_list_backcolor" 
        
        android:fadingEdge="none" 
        android:layout_width="fill_parent" 
        android:layout_height="fill_parent" 
        android:drawSelectorOnTop="false" 
        android:divider="@drawable/shape_line" 
        android:dividerHeight="1.0dip" />
    </LinearLayout>  
</RelativeLayout>
